tests/sources/invalid/generics/new_constructor_empty_type_args.fire
// Parser error: 'new GenericClass<>(...)' with an empty type argument list.

class Box<T> {
    T value;

    Box(T value) {
        this.value = value;
    }
}

void new_constructor_empty_type_args() {
    Box<int32> b = new Box<>(5);  //~ ERROR FS-PARSE-0010 @28
//~^ ERROR FS-PARSE-0010 @28
}
